WebHook ip 수정 테스트

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-Project HarpSeal Homepage ver 1.0.0
+Project HarpSeal Homepage (ver 1.0.0)
 </body>
 </html>
